--- a/Uplift/Uplift/Areas/Admin/Views/Frequency/Index.cshtml
+++ b/Uplift/Uplift/Areas/Admin/Views/Frequency/Index.cshtml
@@ -7,10 +7,10 @@
 <div class="border backgroundWhite">
     <div class="row">
         <div class="col-6">
-            <h2 class="text-primary">Category List</h2>
+            <h2 class="text-primary">Frequency List</h2>
         </div>
         <div class="col-6 text-right">
-            <a asp-action="Upsert" class="btn btn-primary"><i class="fas fa-plus"></i> &nbsp;  Create New Category</a>
+            <a asp-action="Upsert" class="btn btn-primary"><i class="fas fa-plus"></i> &nbsp;  Create New Frequency</a>
         </div>
     </div>
     <br />
@@ -19,7 +19,7 @@
         <thead>
             <tr>
                 <th>Name</th>
-                <th>Category</th>
+                <th>Frequency</th>
                 <th></th>
             </tr>
         </thead>
@@ -27,5 +27,5 @@
 </div>
 @section Scripts{
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
-    <script src="~/js/category.js"></script>
+    <script src="~/js/frequency.js"></script>
 }
