--- a/Uplift/Uplift/Views/Shared/_Layout.cshtml
+++ b/Uplift/Uplift/Views/Shared/_Layout.cshtml
@@ -1,9 +1,15 @@
-﻿<!DOCTYPE html>
+﻿@using Uplift.Utility
+@using Microsoft.AspNetCore.Http
+@using Uplift.Extensions
+
+@inject IHttpContextAccessor HttpContextAccessor
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>@ViewData["Title"] - Uplift</title>
+    <title>@ViewData["Title"] Uplift</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" />
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" />
@@ -40,6 +46,26 @@
                     <li class="nav-item">
                         <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
+
+                    @if (HttpContextAccessor.HttpContext.Session.GetObject<List<int>>(SD.SessionCart) != null)
+                    {
+                     <li style="color:white">
+                         <a asp-area="Customer" asp-controller="Cart" asp-action="Index" class="nav-link text-white">
+                             @{ 
+                                 var count = HttpContextAccessor.HttpContext.Session.GetObject<List<int>>(SD.SessionCart).Count();
+                             }
+                            <i class="fas fa-shopping-cart"></i>&nbsp; (@count)
+                         </a>
+                     </li>
+                    }
+                    else
+                    {
+                        <li style="color:white">
+                            <a href="#"class="nav-link text-white">
+                                <i class="fas fa-shopping-cart"></i>&nbsp; (0)
+                            </a>
+                        </li>
+                    }
                 </ul>
             </div>
             <partial name="_LoginPartial" />
